# Chefwise

./: .env.example  .firebaserc  .gitignore  ARCHITECTURE.md  CLAUDE_ANDROID_BUILD.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MOBILE_APP_COMPLETION.md  NAVIGATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REPOSITORY_SETUP.md  SUBSCRIPTION_SETUP.md  capacitor.config.ts  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  jest.config.js  jest.setup.js  next-i18next.config.js  next.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  storage.rules  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
assets/: DEMO_PLACEHOLDER.md
chefwise/: __init__.py
coverage/: clover.xml
docs/: ANALYTICS.md  ANDROID_PLAYSTORE_BUILD.md  COMMUNITY_RECIPES_SCHEMA.md  DEPLOYMENT.md  OFFLINE_MODE.md  TESTING.md
e2e/: app-flows.spec.js  offline-data.spec.js  offline.spec.js  pwa.spec.js
functions/: index.js  package-lock.json  package.json
mobile/: FEATURES.md  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  UI_FLOW.md  analysis_options.yaml  pubspec.yaml
playwright-report/: index.html
public/: manifest.json  service-worker.js
tests/: __init__.py  test_database.py
(+264 files in other folders)
